--- a/Style/style.css
+++ b/Style/style.css
@@ -1,5 +1,18 @@
-* { padding: 0; margin: 0; border: 0; }
+* { margin: auto; padding: 0; border: 0; }
 @font-face { font-family: 'Arcade Classic'; src: url('../Fonts/ARCADECLASSIC.TTF') format('truetype'); }
 body { margin: auto; width: 1024px; background-color: cadetblue; }
-canvas { position: relative; background: #000; margin-right: auto; margin-left: auto; display: block; margin-top: 10px; }
-#gameOverUI { position: absolute; bottom: 45%; left: 44%; color: aliceblue; font-size: 48px; font-family: 'Arcade Classic'; }
+/* the main container */
+#gameUI { position: absolute; left: 26%; top: 5%; display: block; }
+/*  my canvas */
+#myCanvas { position: absolute; background: #000; display: block; margin: 10px auto 0 auto; }
+/* the menu UI */
+#menuUI { position: absolute; font-size: 36px; background: #000; width: 640px; height: 512px; display: block; font-family: "Arcade Classic", sans-serif; color: #fff; }
+#menuUIButtons { position: inherit; top: 40%; width: 100%; text-align: center; }
+#playUI { font-variant: small-caps; cursor: pointer; }
+#creditsUI { font-variant: small-caps; cursor: pointer; }
+/* game score UI */
+#gameScoreUI { position: absolute; display: block; font-family: "Arcade Classic", sans-serif; color: #fff; font-size: 24px; }
+/* game over UI*/
+#gameOverUI { position: absolute; bottom: 45%; text-align: center; width: 100%; display: block; font-family: "Arcade Classic", sans-serif; color: #fff; }
+#gameRestartUI { display: block; font-size: 36px; cursor: pointer; font-variant: small-caps; }
+#gameOverTextUI { display: block; font-size: 48px; }
