--- a/Style/style.css
+++ b/Style/style.css
@@ -1,12 +1,12 @@
 * { margin: auto; padding: 0; border: 0; }
 @font-face { font-family: 'Arcade Classic'; src: url('../Fonts/ARCADECLASSIC.TTF') format('truetype'); }
-body { margin: 7% auto 0 auto; width: 1024px; background-color: cadetblue; }
+body { margin: 1% auto 0 auto; width: 1024px; background-color: cadetblue; }
 /* the main container */
-#gameUI { position: relative; left: 2%; display: block; width: 640px; height: 512px; }
+#gameUI { position: relative; display: block; width: 672px; height: 672px; }
 /*  my canvas */
 #mainCanvas { position: absolute; background: #000; display: block; margin: 10px auto 0 auto; }
 /* the menu UI */
-#menuUI { position: absolute; font-size: 36px; background: #000; width: 640px; height: 512px; display: block; font-family: "Arcade Classic", sans-serif; color: #fff; }
+#menuUI { position: absolute; font-size: 36px; background: #000; width: 100%; height: 100%; display: block; font-family: "Arcade Classic", sans-serif; color: #fff; }
 #menuUIButtons { position: inherit; top: 40%; width: 100%; text-align: center; }
 #playUI { font-variant: small-caps; cursor: pointer; }
 #creditsUI { font-variant: small-caps; cursor: pointer; }
@@ -21,8 +21,8 @@ body { margin: 7% auto 0 auto; width: 1024px; background-color: cadetblue; }
 #choose_diff_id { position: absolute; color: white; width: 100%; height: 100%; background: #000; }
 #choose_diff_id:after { clear: both; }
 .difficulty {  padding: 5px; margin-top: 15%; float: left; width: 48%; display: block; }
-.difficulty img { margin-left: 26%; }
-.difficulty p { text-align: justify; width: 10em; margin-top: 3%; margin-left: 21%; font-family: "Arcade Classic", sans-serif }
-button { margin-left: 31%; padding: 5px; font-family: "Arcade Classic", sans-serif; cursor: pointer; }
+.difficulty img { margin-left: 29%; }
+.difficulty p { text-align: justify; width: 10em; margin-top: 3%; margin-left: 24%; font-family: "Arcade Classic", sans-serif }
+button { margin-left: 35%; padding: 5px; font-family: "Arcade Classic", sans-serif; cursor: pointer; }
 #easy_btn { margin-top: 29%; }
 #hard_btn { margin-top: 40%; }
