--- a/Style/style.css
+++ b/Style/style.css
@@ -1,10 +1,11 @@
 * { margin: auto; padding: 0; border: 0; }
 @font-face { font-family: 'Arcade Classic'; src: url('../Fonts/ARCADECLASSIC.TTF') format('truetype'); }
-body { margin: 1% auto 0 auto; width: 1024px; background-color: cadetblue; }
+body { margin: 0 auto 0 auto; width: 1024px; background-color: cadetblue; overflow: hidden; }
+#borderUI { position: absolute; background: url("../Images/border_wooden.png") no-repeat; overflow: hidden;  padding: 4.25em 11em 14em 11em; }
 /* the main container */
 #gameUI { position: relative; display: block; width: 672px; height: 672px; }
 /*  my canvas */
-#mainCanvas { position: absolute; background: #000; display: block; margin: 10px auto 0 auto; }
+#mainCanvas { position: absolute; background: #000; display: block; }
 /* the menu UI */
 #menuUI { position: absolute; font-size: 36px; width: 100%; height: 100%; display: block; font-family: "Arcade Classic", sans-serif; color: #fff; background: url('../Images/menu_bg.png') no-repeat; }
 #menuUIButtons { position: inherit; top: 40%; width: 100%; text-align: center; font-variant: small-caps; cursor: pointer; }
