--- a/Style/style.css
+++ b/Style/style.css
@@ -9,6 +9,9 @@ body { margin: 0 auto 0 auto; width: 1024px; background-color: cadetblue; overfl
 /* the menu UI */
 #menuUI { position: absolute; font-size: 36px; width: 100%; height: 100%; display: block; font-family: "Arcade Classic", sans-serif; color: #fff; background: url('../Images/menu_bg.png') no-repeat; }
 .menuUIButtons { display: block; position: inherit; top: 30%; width: 100%; text-align: center; font-variant: small-caps; cursor: pointer; }
+.menuButton:hover { background-color: cadetblue; }
+.optionUIButtons { display: block; position: inherit; top: 30%; width: 100%; text-align: center; font-variant: small-caps; cursor: pointer; }
+.optionUIButtons:hover { background-color: cadetblue; }
 /* game scoreOne UI */
 #gameScoreUI { padding-bottom: 4%; opacity: 0.5; background-color: cadetblue; width: 100%; position: absolute; top: 0; display: block; font-family: "Arcade Classic", sans-serif; color: #fff; font-size: 24px; }
 #scorePlayerOne { position: absolute; left: 82%; }
@@ -24,12 +27,16 @@ body { margin: 0 auto 0 auto; width: 1024px; background-color: cadetblue; overfl
 #optionsUI div { cursor: inherit; }
 #optionsUI select, span, input { cursor: pointer; }
 #optionsBackBtn { cursor: pointer; top: 65%; }
-#musicUI { top: 36%; }
+#musicUI select { top: 105%; }
+#musicUI div { padding: 1% 0; }
+#musicUI div:hover { background-color: cadetblue; }
 #music_select_id { width: 40%; border: 0; left: 31%; padding: 0.5em; text-align: center; }
 #timeChallengeUI { top: 54%; }
 #timechallenge_check { padding: 2em; }
 #sound_effect_option { top: 59%; }
 #gameSpeedUI { top: 41%; }
+#gameSpeedUI div { width: 100%; padding-bottom: 1%; }
+#gameSpeedUI div:hover { background-color: cadetblue; }
 #game_speed_select { border: 0; padding: 0.5em; text-align: center; }
 /* choose game difficulty / map */
 #choose_diff_id { position: absolute; color: white; width: 100%; height: 100%; background: #000; background: url('../Images/menu_bg.png') no-repeat; }
@@ -38,8 +45,15 @@ body { margin: 0 auto 0 auto; width: 1024px; background-color: cadetblue; overfl
 .difficulty img { margin-left: 29%; }
 .difficulty p { text-align: justify; width: 10em; margin-top: 3%; margin-left: 24%; font-family: "Arcade Classic", sans-serif }
 button { margin-left: 35%; padding: 5px; font-family: "Arcade Classic", sans-serif; cursor: pointer; }
-#easy_btn { margin-top: 29%; }
-#hard_btn { margin-top: 40%; }
+#easy, #hard { cursor: pointer; }
+#hard { padding-bottom: 6%; }
+#easy:hover, #hard:hover { background-color: cadetblue; }
+#difficultyBackBtn { padding: 1% 0; font-size: 1.1em;}
 /* progress bar */
 #progress_div { width: 100%; height: 100%; position: inherit; background-color: #000; }
 #progress_div progress { position: inherit; top: 45%; left: 38%; }
+/* credits */
+#credits_ui_diff { cursor: default; position: absolute; font-size: 36px; width: 100%; height: 100%; display: block; font-family: "Arcade Classic", sans-serif; color: #fff; background: url('../Images/menu_bg.png') no-repeat; }
+#creditsText { margin-top: 5em; text-align: center; width: 55%; font-size: 1em; color: coral; }
+#creditsText span { font-size: .6em; color: white; }
+#creditsBackBtn { top: 65%; }
