--- a/Style/style_fhd.css
+++ b/Style/style_fhd.css
@@ -5,7 +5,7 @@ body { margin: 0 auto 0 auto; width: 1024px; background-color: cadetblue; overfl
 /* the main container */
 #gameUI { position: relative; display: block; width: 672px; height: 672px; }
 /*  my canvas */
-#mainCanvas { position: absolute; background: #000; display: block; }
+#mainCanvas { position: absolute; background: #000; display: block; width: 672px; height: 672px; }
 /* the menu UI */
 #menuUI { position: absolute; font-size: 36px; width: 100%; height: 100%; display: block; font-family: "Arcade Classic", sans-serif; color: #fff; background: url('../Images/menu_bg.png') no-repeat; }
 .menuUIButtons { display: block; position: inherit; top: 30%; width: 100%; text-align: center; font-variant: small-caps; cursor: pointer; }
